log
Fri 09 Sep 2022 12:25:31 PM UTC: 
 tests:  0|6
total_score: 0/70
592308e
Sat 10 Sep 2022 06:05:24 PM UTC: 
 hashmap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: initialization of ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   44 |   long i = createPair(key, value);
      |            ^~~~~~~~~~
hashmap.c:48:5: error: implicit declaration of function ‘enlange’; did you mean ‘enlarge’? [-Werror=implicit-function-declaration]
   48 |     enlange(map);
      |     ^~~~~~~
      |     enlarge
hashmap.c:44:8: error: unused variable ‘i’ [-Werror=unused-variable]
   44 |   long i = createPair(key, value);
      |        ^
hashmap.c:43:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   43 |   Pair *newPair = createPair(key, value);
      |         ^~~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:62:53: error: ‘Piar’ undeclared (first use in this function); did you mean ‘Pair’?
   62 |   map->buckets = (Pair **) malloc(capacity * sizeof(Piar));
      |                                                     ^~~~
      |                                                     Pair
hashmap.c:62:53: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:14: error: expected ‘;’ before ‘i’
   65 |   map->size--i;
      |              ^
      |              ;
hashmap.c: In function ‘searchMap’:
hashmap.c:79:8: error: too few arguments to function ‘is_equal’
   79 |     if(is_equal())
      |        ^~~~~~~~
hashmap.c:35:5: note: declared here
   35 | int is_equal(void* key1, void* key2){
      |     ^~~~~~~~
hashmap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
hashmap.c:76:10: error: unused variable ‘i’ [-Werror=unused-variable]
   76 |   size_t i = hash(key, map->capacity);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
398edf5
Sat 10 Sep 2022 06:08:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: initialization of ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   44 |   long i = createPair(key, value);
      |            ^~~~~~~~~~
hashmap.c:48:5: error: implicit declaration of function ‘enlange’; did you mean ‘enlarge’? [-Werror=implicit-function-declaration]
   48 |     enlange(map);
      |     ^~~~~~~
      |     enlarge
hashmap.c:44:8: error: unused variable ‘i’ [-Werror=unused-variable]
   44 |   long i = createPair(key, value);
      |        ^
hashmap.c:43:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   43 |   Pair *newPair = createPair(key, value);
      |         ^~~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:65:14: error: expected ‘;’ before ‘i’
   65 |   map->size--i;
      |              ^
      |              ;
hashmap.c: In function ‘searchMap’:
hashmap.c:79:8: error: too few arguments to function ‘is_equal’
   79 |     if(is_equal())
      |        ^~~~~~~~
hashmap.c:35:5: note: declared here
   35 | int is_equal(void* key1, void* key2){
      |     ^~~~~~~~
hashmap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
hashmap.c:76:10: error: unused variable ‘i’ [-Werror=unused-variable]
   76 |   size_t i = hash(key, map->capacity);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
bca0efa
Sat 10 Sep 2022 06:34:54 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: initialization of ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   44 |   long i = createPair(key, value);
      |            ^~~~~~~~~~
hashmap.c:48:5: error: implicit declaration of function ‘enlange’; did you mean ‘enlarge’? [-Werror=implicit-function-declaration]
   48 |     enlange(map);
      |     ^~~~~~~
      |     enlarge
hashmap.c:50:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘buquets’; did you mean ‘buckets’?
   50 | while(map->buquets[i] != NULL && map->buckets[i]->kay != NULL){
      |            ^~~~~~~
      |            buckets
hashmap.c:50:51: error: ‘Pair’ has no member named ‘kay’; did you mean ‘key’?
   50 | while(map->buquets[i] != NULL && map->buckets[i]->kay != NULL){
      |                                                   ^~~
      |                                                   key
hashmap.c:53:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘b’
   53 |   map->b
      |      ^~
hashmap.c:53:9: error: expected ‘;’ before ‘}’ token
   53 |   map->b
      |         ^
      |         ;
   54 | }
      | ~        
hashmap.c:43:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   43 |   Pair *newPair = createPair(key, value);
      |         ^~~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:69:14: error: expected ‘;’ before ‘i’
   69 |   map->size--i;
      |              ^
      |              ;
hashmap.c: In function ‘searchMap’:
hashmap.c:83:8: error: too few arguments to function ‘is_equal’
   83 |     if(is_equal())
      |        ^~~~~~~~
hashmap.c:35:5: note: declared here
   35 | int is_equal(void* key1, void* key2) {
      |     ^~~~~~~~
hashmap.c:84:3: error: expected expression before ‘}’ token
   84 |   }
      |   ^
hashmap.c:80:10: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |   size_t i = hash(key, map->capacity);
      |          ^
cc1: all warnings being treated as errors
Compilation failed
cb49dce
